--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,7 +4,9 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="5" />
-
+<instrumentation
+        android:name="android.test.InstrumentationTestRunner"
+        android:targetPackage="fortyonepost.com.doubletap" />
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".DoubleTapActivity"
                   android:label="@string/app_name">
@@ -13,6 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+  <uses-library android:name="android.test.runner" />
     </application>
 </manifest>
