--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - ls -la  android-sdk-linux/platform-tools
   - ls -laR android-sdk-linux/build-tools/
   - ls -laR android-sdk-linux/build-tools/18.0.1/
-  - ls -la  android-sdk-linux/build-tools/18.0.1/aapt
+  - ls -la  android-sdk-linux/build-tools/18.0.1/aaptff
   # Just see if aapt can be run now it's been installed
   - file ./android-sdk-linux/build-tools/18.0.1/aapt
   - chmod 777 ./buildstuff.sh
