--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
          It contains the path to the SDK. It should *NOT* be checked into
          Version Control Systems. -->
     <property file="local.properties" />
-
+	<echo message="${sdk.dir}/tools/ant/build.xml"/>
     <!-- The ant.properties file can be created by you. It is only edited by the
          'android' tool to add properties to it.
          This is the place to change some Ant specific build properties.
