update android SDK 21

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 before_script: 
-    - sudo wget -q http://dl.google.com/android/android-sdk_r18-linux.tgz 
-    - sudo tar xzvf android-sdk_r18-linux.tgz > /dev/null
+#http://dl.google.com/android/android-sdk_r21.1-linux.tgz
+#http://dl.google.com/android/android-sdk_r18-linux.tgz 
+    - sudo wget -q http://dl.google.com/android/android-sdk_r21.1-linux.tgz
+    - sudo tar xzvf android-sdk_r21.1-linux > /dev/null
     - sudo android-sdk-linux/tools/android -s update sdk --filter android-17,platform-tool --no-ui
     - sudo android-sdk-linux/tools/android -s update project --path ./doubletap --target "android-17"
     - sudo chmod -R 777 ./*
