--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_script:
 #http://dl.google.com/android/android-sdk_r21.1-linux.tgz
 #http://dl.google.com/android/android-sdk_r18-linux.tgz 
     - sudo wget -q http://dl.google.com/android/android-sdk_r21.1-linux.tgz
-    - sudo tar xzvf android-sdk_r21.1-linux > /dev/null
+    - sudo tar xzvf android-sdk_r21.1-linux
     - sudo android-sdk-linux/tools/android -s update sdk --filter android-17,platform-tool --no-ui
     - sudo android-sdk-linux/tools/android -s update project --path ./doubletap --target "android-17"
     - sudo chmod -R 777 ./*
