--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,27 @@
 language: java
-before_script: 
-#http://dl.google.com/android/android-sdk_r21.1-linux.tgz
-#http://dl.google.com/android/android-sdk_r18-linux.tgz 
-    - sudo wget -q http://dl.google.com/android/android-sdk_r18-linux.tgz 
-    - sudo tar xzvf android-sdk_r18-linux.tgz
-    - sudo android-sdk-linux/tools/android -s update sdk --filter android-17,platform-tool --no-ui
-    - sudo android-sdk-linux/tools/android -s update project --path ./doubletap
-    - sudo chmod -R 777 ./*
+before_install:
+  # download the latest android sdk and unzip
+  - wget http://dl.google.com/android/android-sdk_r18-linux.tgz
+  - tar -zxf android-sdk_r18-linux.tgz
+  - export ANDROID_HOME=`pwd`/android-sdk-linux
+  - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/build-tools/18.0.1
+  # only update the sdk for the tools and platform-tools (1,2) and whatever api level
+  # you are building for android (run "android list sdk" to get the full list.  9 = 2.3.3 or API level 10
+  - android update sdk --filter 1,2,8,9 --no-ui --force
+  # Once we have downloaded the essential tools more targets are available for download, so go and get what we need.
+  - android update sdk --filter android-8 --no-ui --force
+  # now get a runtime environment, the latest revision of Android (4.2.2) should do.
+  - android update sdk --filter android-17,sysimg-17,tools,platform-tools,extra-android-support --no-ui --force
+  - echo y | android update sdk --filter build-tools-18.0.1 --no-ui --force  
+before_script:
+  - pwd
+  - ls -la
+  - ls -la  android-sdk-linux
+  - ls -la  android-sdk-linux/platform-tools
+  - ls -laR android-sdk-linux/build-tools/
+  - ls -laR android-sdk-linux/build-tools/18.0.1/
+  - ls -la  android-sdk-linux/build-tools/18.0.1/aapt
+  # Just see if aapt can be run now it's been installed
+  - file ./android-sdk-linux/build-tools/18.0.1/aapt
+  - chmod 777 ./buildstuff.sh
 script: "./buildstuff.sh"
