--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ before_script:
   - ls -laR android-sdk-linux/build-tools/18.0.1/
   - ls -la  android-sdk-linux/build-tools/18.0.1/aapt
   # Just see if aapt can be run now it's been installed
-  - file ./android-sdk-linux/build-tools/18.0.1/aapt
-  - chmod 777 ./buildstuff.sh
+  #- file ./android-sdk-linux/build-tools/18.0.1/aapt
+  - chmod 777 ./*
 script: "./buildstuff.sh"
